# FOSCAT

./: .gitignore  .pre-commit-config.yaml  LICENCE  LICENSE  MANIFEST  README.md  benchmak.py  convdemo.py  mkdocs.yml  pyproject.toml  setup.py  sh.sh  xarray-interace-demo.ipynb
.github/workflows/: ci.yml  docs.yml
ci/: environment.yml
docs/: index.md
docs/examples/: minimal-examples.md  notebook-map.md
docs/getting-started/: concepts.md  installation.md
docs/reference/: api-entry-points.md  best-practices.md
docs/user-guide/: 2d-synthesis.md  component-separation.md  healpix-neural-networks.md  healpix-synthesis.md  local-healpix-wavelets.md  scattering-covariance.md
docs_sphinx/: Makefile  changelog.md  conf.py  index.md  installation.md  overview.md  requirements.txt
docs_sphinx/reference/: module-map.md
docs_sphinx/user-guide/: 2d-synthesis.md  component-separation.md  fast-synthesis-unet.md  healpix-synthesis.md  local-healpix-wavelets.md  neural-networks.md  scattering-covariance.md  synthesis-options.md  synthesis.md
src/FoCUS/: FoCUS.py  saved_FoCUS.py
src/demo/: fsl.py  pattern.py  test2D.py  test2Dplot.py  testBloom.py  testBplot.py  testFSL.py  testFSLplot.py  testHealpix.py  testHplot.py
src/foscat/: BkBase.py  BkNumpy.py  BkTensorflow.py  BkTorch.py  CNN.py  CircSpline.py  FoCUS.py  GCNN.py  GetGPUinfo.py  HOrientedConvol.py  HealBili.py  HealSpline.py  Plot.py  Rformat.py  Softmax.py  SphereDownGeo.py  SphereUpGeo.py  SphericalStencil.py  Spline1D.py  SynthHalfUNet2D.py  Synthesis.py  UNET.py  __init__.py  adam.py  alm.py  alm_latlon.py  alm_loc.py  alm_loc_optim.py  backend.py  backend_tens.py  foscat.py  heal_NN.py  heal_bili.py:PG$Secure  healpix_unet_torch.py  healpix_unet_torch.py.bak  healpix_unet_torch.py:PG$Secure  healpix_vit_skip.py  healpix_vit_torch.py  loss_backend_tens.py  loss_backend_torch.py  (+12 more)
src/foscat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/foscat/xarray/: __init__.py  accessor.py  parameters.py  statistics.py
src/tests/: T002.py  T003.py  T015.py  cib_map_Planck.npy  demo.py  demo2d.py  demo_cov.py  demo_cov_LM.py  hwst_foscat.py  hwst_foscat_v2.py  plot_foscat.py  plotdemo.py  plotdemo2d.py  plotdemo_cov.py  test2D.py  test2Dplot.py  testHealpix.py  testHealpix_mpi.py  testHplot.py  test_alm.py  test_denoise.py  test_paolo.py  test_synthe.py  unitary_test.py
src/tests/xarray/: test_statistics.py
tests/: test_numpy_scat2d_parity.py
